# optra-bicycle

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  analyze.ipynb  clear.py  conanfile.txt  cubic_curvature_paths.ipynb  cubic_position_paths.ipynb  steer.ipynb  tree.json
src/: backward_pass.h  constants.h  dynamics.h  interp.h  loss.h  main.cpp  policy.h  printing.h  problem.h  rollout.h  rrt.h  smooth_func_utils.h  solver.h  solver_settings.h  space.h  steer.h  steer_cubic.h  trajectory.h  util.h
